testdata/baselines/reference/tests_cases_conformance_externalModules_typeOnly_namespaceImportTypeQuery.ts.ast
SourceFile
  ClassDeclaration
    Identifier: ' A'
  ExportDeclaration
    NamedExports
      ExportSpecifier
        Identifier: ' A'
  ClassDeclaration
    ExportKeyword
    Identifier: ' B'
  EmptyStatement
  ImportDeclaration
    ImportClause
      NamespaceImport
        Identifier: ' types'
    StringLiteral
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' A'
        TypeQuery
          QualifiedName
            Identifier: ' types'
            Identifier: 'A'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' B'
        TypeQuery
          QualifiedName
            Identifier: ' types'
            Identifier: 'B'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' t'
        TypeQuery
          Identifier: ' types'
        ObjectLiteralExpression
          PropertyAssignment
            Identifier: '
  // error: while you can ask for `typeof types.A`,
  // `typeof types` does not include `A`
  A'
            AsExpression
              Identifier: ' undefined'
              AnyKeyword
          PropertyAssignment
            Identifier: '
  B'
            AsExpression
              Identifier: ' undefined'
              AnyKeyword
